Wed Mar 24 09:19:12 GMT 2004 (njh)
----------------------------------
  * libclamav/blob.c:	Reduce the number of calls to cli_realloc, since realloc
  	seems to be very slow on FreeBSD

Tue Mar 23 15:39:09 GMT 2004 (trog)
-----------------------------------
  * clamd: stop scanning if the client disconnects

Tue Mar 23 11:09:30 GMT 2004 (njh)
----------------------------------
  * libclamav/blob.c:	More restrictive about which characters can be used
	in filenames on DOS based systems

Tue Mar 23 09:26:18 GMT 2004 (njh)
----------------------------------
  * docs/man/clamav-milter.8:	Document the default value for --server, and
  	clamav-milter's load balancing/fault tolerance capabilities

Mon Mar 22 21:30:24 CET 2004 (tk)
---------------------------------
  * freshclam: require strict permissions for config file when HTTPProxyPassword
	       is specified

Mon Mar 22 09:28:04 GMT 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: minor cleanup

Sun Mar 21 17:30:22 GMT 2004 (njh)
----------------------------------
  * libclamav:	Scan bounce messages with no headers for encoded viruses/worms

Sun Mar 21 09:51:45 GMT 2004 (njh)
----------------------------------
  * libclamav:	Faster scanning for non MIME messages, only scan the message
  	once for binhex, uuencode, bounces etc.

Sat Mar 20 19:37:11 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Removed the duplicated code from bounce checks

Sat Mar 20 17:49:43 GMT 2004 (njh)
----------------------------------
  * libclamav:	More flexable approach to scanning bounce messages within
  	emails means more bounces are caught but at the expense of some
	duplication of code for now

Sat Mar 20 15:53:10 CET 2004 (tk)
---------------------------------
  * libclamav: make cli_filetype non static

Sat Mar 20 13:33:49 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	More bounces added

Sat Mar 20 12:40:15 GMT 2004 (njh)