@@ -63,6 +63,7 @@ Michael Dankov <misha*btrc.ru>
 Alejandro Dubrovsky <s328940*student.uq.edu.au>
 Magnus Ekdahl <magnus*debian.org>
 Jason Englander <jason*englanders.cc>
+Tony Finch <dot*dotat.at>
 David Ford <david+cert*blue-labs.org>
 Michel Gaudet <Michel.Gaudet*ehess.fr>
 Philippe Gay <ph.gay*free.fr>
